# avatars

./: .gitignore  Cargo.toml
.github/workflows/: rust_ci.yml
application/: Cargo.toml
application/src/: lib.rs  mediator.rs
application/src/command/: mod.rs
application/src/command/user/: login_user.rs  mod.rs  register_user.rs
application/src/shared/: error.rs  id_provider.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/models/: email_address.rs  mod.rs  otp.rs  session.rs  user.rs
domain/src/repositories/: id_provider.rs  mod.rs  opt_repository.rs  otp_repository.rs  session_repository.rs  user_repository.rs
domain/src/services/: mail_service.rs  mod.rs  user_service.rs
domain/src/views/: mod.rs  otp_view.rs  session_view.rs  user_view.rs
migrations/: 001_create_users_table.sql
persistence/: Cargo.toml
persistence/migrations/: 001_create_users_table.sql  002_create_session_table.sql
persistence/src/: lib.rs
persistence/src/adapters/: mod.rs  smtp.rs
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs  login.rs
web/templates/: index.html  login.html
